--- a/E-Commerce-App/src/components/card/ Card.module.css
+++ b/E-Commerce-App/src/components/card/ Card.module.css
@@ -1,19 +1,29 @@
 /* Card component */
+.card-container {
+  display: flex;
+  flex-wrap: wrap;
+  margin-left: 20rem;
+  margin-top: 2rem;
+  z-index: -2;
+}
 
 .card {
   display: flex;
   flex-direction: column;
   gap: 12px;
+  margin: 20px;
   padding: 16px;
   border: 1px solid #e0e0e0;
   border-radius: 8px;
+  cursor: pointer;
 }
 
 .card-img {
-  width: 100%;
+  width: 13rem;
   height: auto;
   object-fit: cover;
   border-radius: 6px;
+  margin-bottom: 1rem;
 }
 
 .card-details {
@@ -25,6 +35,7 @@
 .card-title {
   font-size: 1rem;
   font-weight: 600;
+  margin-bottom: 1rem;
 }
 
 .card-weight {
@@ -39,6 +50,9 @@
 .card-price {
   margin-top: 4px;
   font-weight: bold;
+    display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .price {
