--- a/E-Commerce-App/src/index.css
+++ b/E-Commerce-App/src/index.css
@@ -7,7 +7,12 @@
 
 a {
   text-decoration: none;
-  color: rgb(13, 74, 167)
+  color: rgb(12, 78, 42);
+  cursor: pointer;
+}
+
+a:hover {
+  color: rgb(13, 165, 59);
 }
 
 li{
