Filtering bug fix  & Css

--- a/E-Commerce-App/src/index.css
+++ b/E-Commerce-App/src/index.css
@@ -1,4 +1,4 @@
-* {
+/* * {
   padding: 0;
   margin: 15px;
   box-sizing: border-box;
@@ -39,4 +39,4 @@ p{
   text-align: justify;
   padding: 5px 10px;
   font-family: "Roboto", "Open Sans", sans-serif;
-}
+} */
