--- a/E-Commerce-App/src/components/sidebar/Sidebar.module.css
+++ b/E-Commerce-App/src/components/sidebar/Sidebar.module.css
@@ -9,10 +9,10 @@
     align-items: center;
 }
 
-.logo-container {
+.logoContainer {
     margin-bottom: 4rem;
 }
 
-.logo-container h1 {
+.logoContainer h1 {
     margin-top: 1.3rem;
 }
