--- a/E-Commerce-App/src/components/card/Card.module.css
+++ b/E-Commerce-App/src/components/card/Card.module.css
@@ -1,13 +1,4 @@
 /* Card component */
-
-/* .cardContainer {
-  display: flex;
-  flex-wrap: wrap;
-  margin-left: 20rem;
-  margin-top: 2rem;
-  z-index: -2;
-} */
-
 .card {
   display: flex;
   flex-direction: column;
@@ -19,21 +10,13 @@
   cursor: pointer;
   transition: box-shadow 0.3s ease, transform 0.2s ease;
   max-width: 250px;
+  background-color: #e0e0e0;
 }
 
 .card:hover {  
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
   transform: translateY(-4px);
 }
-
-/* .cardImg {
-  width: 13rem;
-  height: auto;
-  object-fit: cover;
-  border-radius: 6px;
-  margin-bottom: 1rem;
-  background-color: #f0f0f0;
-} */
 
 .cardDetails {
   display: flex;
@@ -52,15 +35,9 @@
   font-size: 0.85rem;
   color: #666;
 }
-
-/* .weight {
-  display: inline-block;
-} */
-
 .cardPrice {
   margin-top: 4px;
   font-weight: bold;
-    /* display: flex; */
   justify-content: space-between;
   align-items: center;
 }
@@ -107,12 +84,18 @@
   }
 
   .card {
-    max-width: 90%;
+    max-width: calc(100vw - 40px);
+     width: 100%;
     margin: 10px auto;
   }
 
   .cardImg {
     width: 100%;
     height: auto;
+    object-fit: cover;
   }
+
+
 }
+
+
