--- a/E-Commerce-App/src/components/input/Input.module.css
+++ b/E-Commerce-App/src/components/input/Input.module.css
@@ -1,16 +1,16 @@
-.sidebar-label-container {
+/* .sidebarLabelContainer {
   display: flex;
-  align-items: center;
+  align-items: center; 
   gap: 8px;
   cursor: pointer;
   font-size: 0.9rem;
 }
 
-.sidebar-label-container input {
+/* .sidebarLabelContainer input {
   display: none;
-}
+}  */
 
-.checkmark {
+/* .checkmark {
   width: 14px;
   height: 14px;
   border: 2px solid #555;
@@ -18,6 +18,44 @@
   display: inline-block;
 }
 
-.sidebar-label-container input:checked + .checkmark {
+.sidebarLabelContainer input:checked + .checkmark {
   background-color: #555;
+} */ 
+
+/* .sidebarInput{
+ margin-right: 8px;
+ flex-shrink: 0;
+} */
+
+/* .sidebarLabelContainer {
+    display: flex;
+  align-items: center; 
+  margin-bottom: 10px;
+} */
+
+.sidebarInput{
+  margin-right: 8px;
+  vertical-align: middle;
 }
+
+.sidebarLabelContainer {
+    display: block;  /* Each label on its own line */
+    color: #654321;
+    margin-bottom: 10px;
+    font-size: large;
+    font-weight: bold; 
+}
+
+.sidebarLabelContainer:hover {
+  background-color: #DEB887;
+  color: #241714; 
+  font-weight: bold;
+}
+
+
+.sidebarLabelContainer:hover:has(.sidebarInput:checked) {
+  color: #1d1310;
+}
+
+
+
