--- a/E-Commerce-App/src/components/products/Products.module.css
+++ b/E-Commerce-App/src/components/products/Products.module.css
@@ -5,3 +5,18 @@
   margin-top: 2rem;
   z-index: -2;
 }
+
+.cardContainer{
+  margin-left: 250px;
+  padding: 20px;
+}
+
+/* MOBILE FIX */
+@media (max-width: 768px) {
+  .cardContainer {
+    margin-left: 0;
+    padding: 5px;
+    justify-content: center;
+    gap: 15px;
+  }
+}
