--- a/E-Commerce-App/src/components/recommended/Recommended.module.css
+++ b/E-Commerce-App/src/components/recommended/Recommended.module.css
@@ -1,11 +1,11 @@
-.recommended-flex {
+/* .recommendedFlex {
   display: flex;
   margin-left: 20rem;
 }
 
-.recommended-title {
+.recommendedTitle {
   margin-left: 20rem;
   margin-bottom: 20px;
   margin-top: 20px;
   font-size: 20px;
-}
+} */
