--- a/E-Commerce-App/src/components/sidebar/category/Category.module.css
+++ b/E-Commerce-App/src/components/sidebar/category/Category.module.css
@@ -1,14 +1,15 @@
-.sidebar-title {
+/* .sidebarTitle {
   font-size: 22px;
   font-weight: normal;
   margin-bottom: 20px;
 }
 
-.sidebar-items {
+//???
+.sidebarItems {
   margin-top: 20px;
 }
 
-.sidebar-label-container {
+.sidebarLabelContainer {
   display: block;
   position: relative;
   padding-left: 35px;
@@ -20,7 +21,7 @@
   user-select: none;
 }
 
-.sidebar-label-container input {
+.sidebarLabelContainer input {
   position: absolute;
   opacity: 0;
   cursor: pointer;
@@ -40,11 +41,11 @@
   background: linear-gradient(blue, crimson);
 }
 
-.sidebar-label-container:hover input ~ .checkmark {
+.sidebarLabelContainer:hover input ~ .checkmark {
   background-color: #ccc;
 }
 
-.sidebar-label-container input:checked ~ .checkmark {
+.sidebarLabelContainer input:checked ~ .checkmark {
   background-color: #2196f3;
 }
 
@@ -54,11 +55,11 @@
   display: none;
 }
 
-.sidebar-label-container input:checked ~ .checkmark:after {
+.sidebarLabelContainer input:checked ~ .checkmark:after {
   display: block;
 }
 
-.sidebar-label-container .checkmark:after {
+.sidebarLabelContainer .checkmark:after {
   top: 6.4px;
   left: 6.4px;
   width: 7px;
@@ -70,4 +71,43 @@
 .line {
   margin-top: 3rem;
   border-color: #f7f7f7;
+} */
+
+
+/* .sidebarLabelContainer {
+    display: block;   Each label on its own line 
+    margin-bottom: 10px;
+        font-size: large;
+    font-weight: bold;  
+}
+
+.sidebarLabelContainer:hover {
+    background-color: #555;
+  color: white;
+}
+
+
+.sidebarLabelContainer:hover:has(input:checked) {
+  background-color: #04AA6D;
+  color: white; 
+} */
+
+
+.sidebarLabelContainer {
+    display: block;  /* Each label on its own line */
+    color: #654321;
+    margin-bottom: 10px;
+    font-size: large;
+    font-weight: bold; 
+}
+
+.sidebarLabelContainer:hover {
+  background-color: #DEB887;
+  color: #241714; 
+  font-weight: bold;
+}
+
+
+.sidebarLabelContainer:hover:has(.sidebarInput:checked) {
+  color: #1d1310;
 }
